cmake_minimum_required(VERSION 3.10)
# Project name
project(game VERSION 0.0.1)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED 20)
set(TOOLCHAIN_PREFIX x86_64-w64-mingw32)
if (${TOOLCHAIN_PREFIX} STREQUAL "WINDOWS")
    set(CMAKE_C_COMPILER ${TOOLCHAIN_PREFIX}-gcc)
    set(CMAKE_CXX_COMPILER ${TOOLCHAIN_PREFIX}-g++)
else()
    set(CMAKE_C_COMPILER gcc)
    set(CMAKE_CXX_COMPILER g++)
endif()
add_compile_options(-Wall -Wextra -pedantic)
set(SOURCES main.cpp
    Game.cpp)
add_executable(game ${SOURCES})
target_include_directories(game PUBLIC ${PROJECT_BINARY_DIR})
set_target_properties(game PROPERTIES LINKER_LANGUAGE CXX)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
target_link_libraries(game ${SDL2_LIBRARIES})